src/test/deca/context/valid/Objet/selection_class2.deca
// Description:
//    test de sélection avec méthode
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i;
    int get(){}
}

{
    A a = new A();
    int j = a.get() ;
}