src/test/deca/context/invalid/Objet/void_in_parameter.deca
// Description:
//    test de mettre paramètre de type void dans une méthode 
//
// Resultats:
//  12:13: The type of an argument in the input of a function must not be Void
//
// Historique:
//    cree le 20/01/2022


class A{
    void get(int i , void v , float f ){}
}
{}



